# Code_RCWA

./: .gitignore  RCWA_fields_2D.ipynb  README.md  how_to_RCWA WIP.ipynb  how_to_RCWA.ipynb  how_to_RCWA2D.ipynb  how_to_RCWA2D_new.ipynb  how_to_RCWA_fields.ipynb  pyproject.toml  setup.py  tuto_RCWA_2D.ipynb
RCWA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
RCWA_3D_python/: base.py
RCWA_project/: __init__.py  base.py  base_functions.py  bunch.py  classes.py  compute1D.py  compute2D.py  core.py  fields.py  materials.py  save_compute_2D.py
core/: bunch.py
